--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Aula Do Professor Lucas em GIT
 <p>The Gift of The Eradicated appears to be a red-and-black colored orb, surrounded by a red aura with red/white sparkles floating around. An entity constructed of a wet floor sign and wire coat hangers is seen holding the orb.</p>
 
 **THE EYE IS EVER WATCHING**
-<a href="https://www.youtube.com/watch?v=5yEWEhSnElw"> <img src="https://static.wikia.nocookie.net/regretevator/images/6/63/Bout_2_be_eradicated.png/revision/latest?cb=20250106185255"> </a>
+<a href="https://www.youtube.com/watch?v=5yEWEhSnElw"> <img src="pain.png"> </a>
 
     
 </body>
